// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should render empty 1`] = `
Array [
  <div
    data-mock="Helmet"
  >
    {
  "htmlAttributes": {
    "lang": "en"
  },
  "meta": [
    {
      "name": "description",
      "content": "Site description"
    },
    {
      "name": "app-version",
      "content": "0.0.0-mock"
    }
  ],
  "title": "Regular title"
}
  </div>,
  <div
    data-mock="Header"
  >
    {
  "title": "Regular title",
  "location": {}
}
  </div>,
  <div
    data-mock="Container"
  >
    {}
  </div>,
]
`;

exports[`Layout should render with children 1`] = `
Array [
  <div
    data-mock="Helmet"
  >
    {
  "htmlAttributes": {
    "lang": "en"
  },
  "meta": [
    {
      "name": "description",
      "content": "Site description"
    },
    {
      "name": "app-version",
      "content": "0.0.0-mock"
    }
  ],
  "title": "Regular title"
}
  </div>,
  <div
    data-mock="Header"
  >
    {
  "title": "Regular title",
  "location": {}
}
  </div>,
  <div
    data-mock="Container"
  >
    {}
    <div>
      Some child
    </div>
  </div>,
]
`;
